<resources>
    <string name="app_name">GotoEsig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GotoEsig</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="cherche_title">Chercher un Trajet</string>
    <string name="info_no_email_found">no email found</string>
    <string name="info_no_username_found">no username found</string>

    <string name="mode_transport">Mode de Transport</string>

    <string name="hint_position">Votre position</string>

    <string name="hint_destination">Destination</string>

    <string name="edit_date">Date</string>

    <string name="retard_tolere">Retard Toléré</string>

    <string name="nbr_place_dispo">Nombre de places disponibles</string>

    <string name="voiture">Voiture</string>

    <string name="velo">Vélo</string>

    <string name="metro">Métro</string>

    <string name="pied">A pieds</string>

</resources>
