<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterFragment">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="@string/hello_blank_fragment" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <LinearLayout
            android:id="@+id/container_transport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/mode_transport"
                style="@style/ModeTransport" />

            <!-- Input field -->
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_transport"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

        </LinearLayout>

        <!-- Input fields -->
        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTrajet"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_position"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_position"
                android:inputType="textCapWords"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <!-- Breed field -->
            <EditText
                android:id="@+id/edit_destination"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_destination"
                android:inputType="textCapWords"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <!-- Label -->
            <TextView
                android:text="@string/edit_date"
                style="@style/ModeTransport"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/date_jour"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="date"
                android:maxLength="2"
                android:hint="JJ"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="/"/>

            <EditText
                android:id="@+id/date_mois"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="date"
                android:maxLength="2"
                android:hint="MM"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="/"/>

            <EditText
                android:id="@+id/date_annee"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:inputType="date"
                android:maxLength="4"
                android:hint="AAAA"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="  "/>

            <EditText
                android:id="@+id/date_heure"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="datetime"
                android:hint="h"
                android:maxLength="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:text=":"/>

            <EditText
                android:id="@+id/date_minute"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="datetime"
                android:maxLength="2"
                android:hint="min"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_retard_tolere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/retard_tolere"
                android:paddingTop="16dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/retard_decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="-"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/edit_retard_tolere"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="0"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/retard_increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="+"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="mins"
                    android:layout_alignParentRight="true"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_nbr_place_dispo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/nbr_place_dispo"
                style="@style/ModeTransport"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/edit_nbr_place_dispo"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:inputType = "numberDecimal"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/trajet_valid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorTrajet"
            android:text="Valider"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>




=======
        android:text="Test" />
>>>>>>> 406304f9c93e5f5098fa80e1ea8172ccbd97189a

</FrameLayout>